# caligo

./: .gitignore  LICENSE  README.md  environment.yml  pyproject.toml
caligo/: __init__.py  background.py  case.py  diagnostics.py  justdoit.py  microphysics.py  optics.py
data/chemistry/: README.md
data/stellar_flux/: GJ1214_test.txt
examples/: run_gj1214b.py  test_scaffold.py
examples/notebooks/: caligo_tutorial_gj1214b_full_production.ipynb  figures.ipynb
runs/: README.md
tests/: test_import.py  test_kzz.py
