[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "caligo"
version = "0.1.0"
description = "PICASO-style haze microphysics and optical post-processing tools for exoplanet atmospheres."
readme = "README.md"
requires-python = ">=3.10,<3.13"
license = { text = "MIT" }
authors = [
    { name = "Shelby Courreges" }
]
keywords = [
    "exoplanets",
    "haze",
    "microphysics",
    "atmospheres",
    "PICASO",
    "photochem",
    "VIRGA"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Topic :: Scientific/Engineering :: Physics"
]

dependencies = [
    "numpy>=1.26,<2.0",
    "scipy>=1.13,<1.14",
    "pandas>=2.2,<2.3",
    "matplotlib>=3.10,<3.11",
    "astropy>=7.0,<8.0",
    "pyyaml>=6.0,<7.0",
    "miepython==3.0.2",
    "picaso==4.0",
    "photochem==0.6.5"
]

[project.optional-dependencies]
notebooks = [
    "ipykernel>=6.29,<7"
]

dev = [
    "ruff",
    "black",
    "build"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["caligo*"]

[tool.black]
line-length = 88

[tool.ruff]
line-length = 88