[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "caligo"
version = "0.1.0"
description = "PICASO-style haze microphysics and optical post-processing tools for exoplanet atmospheres."
readme = "README.md"
requires-python = ">=3.10,<3.13"
license = { text = "MIT" }

authors = [
    { name = "Shelby Courreges" }
]

keywords = [
    "exoplanets",
    "haze",
    "microphysics",
    "atmospheres",
    "PICASO",
    "photochem",
    "VIRGA"
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Topic :: Scientific/Engineering :: Physics",
]

dependencies = [
    "numpy",
    "scipy",
    "pandas",
    "matplotlib",
    "astropy",
    "pyyaml",
    "miepython",
]

[project.optional-dependencies]
notebooks = [
    "ipykernel",
]

dev = [
    "ruff",
    "black",
    "build",
    "pytest",
]

full = [
    "picaso",
    "virga-exo",
]

[project.urls]
Homepage = "https://github.com/Scourreges/caligo"
Repository = "https://github.com/Scourreges/caligo"
Issues = "https://github.com/Scourreges/caligo/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["caligo*"]

[tool.black]
line-length = 88

[tool.ruff]
line-length = 88