[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "caligo"
version = "0.1.0"
description = "PICASO-style haze microphysics and optical post-processing tools for exoplanet atmospheres."
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.11"
license = { text = "MIT" }

authors = [
    { name = "Shelby Courreges" }
]

keywords = [
    "exoplanets",
    "haze",
    "microphysics",
    "atmospheres",
    "PICASO",
    "photochem",
    "VIRGA",
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Topic :: Scientific/Engineering :: Physics",
]

dependencies = [
    "numpy>=2.0",
    "scipy",
    "pandas",
    "matplotlib",
    "astropy",
    "pyyaml",
    "miepython",
    "picaso>=4.0",
    "virga-exo>=2.0",
]

[project.optional-dependencies]
notebooks = [
    "ipykernel",
    "jupyter",
]

dev = [
    "ruff",
    "black",
    "build",
    "pytest",
]

[project.urls]
Homepage = "https://github.com/Scourreges/caligo"
Repository = "https://github.com/Scourreges/caligo"
Issues = "https://github.com/Scourreges/caligo/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["caligo*"]

[tool.black]
line-length = 88

[tool.ruff]
line-length = 88